--- a/university management system/src/main/resources/application.properties
+++ b/university management system/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ums?useSSL=false&serverTimezone=GMT&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
+spring.jpa.open-in-view=true
 
-#Hibernate
-
-#Hibernate auto ddl
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
