--- a/university management system/src/main/resources/application.properties
+++ b/university management system/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ums?useSSL=false&serverTimezone=GMT&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ums?useSSL=false&serverTimezone=GMT&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.open-in-view=true
